@@ -53,6 +53,9 @@ Summary of important user-visible changes for image 1.1.0:
       Otsu
       percentile
 
+ ** Otsu's method for automatic threshold (default method for `graythresh') has
+    been rewritten and should perform faster.
+
  ** The following functions have been deprecated (see their help text
     for the recommended alternatives):
 
